Buttons changed. Bugs with text-overflowing fixed

--- a/css/advantages.css
+++ b/css/advantages.css
@@ -25,6 +25,11 @@
     justify-content: center;
 }
 
+.advantage__icon img {
+    width: auto;
+    max-width: 100%;
+}
+
 
 @media only screen and (max-width: 1200px) {
      /**/
