--- a/css/base.css
+++ b/css/base.css
@@ -20,7 +20,7 @@ input, button, textarea {
 
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
 
@@ -95,6 +95,8 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14px;
   cursor: pointer;
   border: 1px solid #000;
+  text-decoration: none;
+  color: #000;
 }
 
 .btn:hover{
