--- a/css/news.css
+++ b/css/news.css
@@ -12,12 +12,12 @@
 }
 
 .news-item__button {
-    display: inline-block;
     padding: 6px 16px;
     border: 1px solid;
     border-radius: 4px;
-    cursor: pointer;
     font-size: 13px;
+    color: #000;
+    text-decoration: none;
     transition: all .3s;
 }
 
